--- a/Linear Regression ML imp.ipynb
+++ b/Linear Regression ML imp.ipynb
@@ -3402,7 +3402,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.1 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -3416,11 +3416,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.7.0 (default, Jun 28 2018, 08:04:48) [MSC v.1912 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "bc4e1743dbf908201db298fb9d1da3bc41d7f8bf163b0d730b84ef4151351c23"
+    "hash": "e97b0869f07afe9994144079cc730091d115870ea636a5734e62e2cea00ce0f2"
    }
   }
  },
